# sol-bot

./: .dockerignore  .gitignore  API_EXAMPLES.md  API_MULTI_TOKEN.md  API_USAGE.md  CACHE_LIMIT.md  Cargo.toml  DEPLOY.md  Dockerfile  HOST_NETWORK.md  INSTALL_RUST.md  Makefile  NGINX_FIX.md  NGINX_SETUP.md  NGINX_SETUP_API_SOL.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  README.md  START_BOT.bat  TROUBLESHOOTING.md  build.ps1  deploy.ps1  deploy.sh  diagnose-server.sh  docker-compose.prod.yml  docker-compose.yml  fix-api-server.sh  nginx-config-example.conf  nginx-config-sminem.conf  nginx-fixed-config.conf  quick-test.ps1  quick-test.sh  run_bot.bat  test-nginx-api-sol.ps1  test-nginx-api.ps1  test-nginx-api.sh  test_api.ps1
.github/workflows/: build.yml  deploy-prod.yml
src/: api.rs  api_server.rs  cli.rs  lib.rs  main.rs  rpc_client.rs  token_monitor.rs
