[package]
name = "solana-holder-bot"
version = "0.1.0"
edition = "2021"
authors = ["Solana Bot Developer"]
description = "Production-ready Solana token holder monitoring bot"
license = "MIT"

[dependencies]
solana-sdk = "2.0"
solana-client = "2.0"
solana-program = "2.0"
solana-account-decoder = "2.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
thiserror = "1.0"
spl-token = "4.0"
chrono = "0.4"
base64 = "0.21"
bytemuck = { version = "1.14", features = ["derive"] }

[[bin]]
name = "solana-holder-bot"
path = "src/main.rs"

